--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AppActivity">
+    tools:context="edu.bluejack20_1.dearmory.activities.AppActivity">
 
     <ImageView
         android:id="@+id/iv_main_background"
@@ -34,6 +34,14 @@
         android:layout_marginBottom="55dp">
 
     </androidx.viewpager.widget.ViewPager>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/setting"
+        android:background="@color/transparent"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="10dp"/>
 
     <!--    <TextView-->
     <!--        android:layout_width="match_parent"-->
