--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.HomeFragment">
+    tools:context="edu.bluejack20_1.dearmory.fragments.HomeFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -31,5 +31,13 @@
         android:src="@drawable/write"
         app:tint="?attr/colorIconWithBackground"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Home"
+        android:textSize="18sp"
+        android:textColor="?attr/editTextColor"
+        android:paddingLeft="20dp"
+        android:paddingVertical="10dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
