--- a/app/src/main/res/layout/activity_app.xml
+++ b/app/src/main/res/layout/activity_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AppActivity">
+    tools:context="edu.bluejack20_1.dearmory.activities.AppActivity">
 
     <ImageView
         android:id="@+id/iv_main_background"
