--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DiaryActivity">
+    tools:context="edu.bluejack20_1.dearmory.activities.DiaryActivity">
 
     <ImageView
         android:id="@+id/iv_main_background"
