--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ProfileFragment">
+    tools:context="edu.bluejack20_1.dearmory.fragments.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -35,12 +35,12 @@
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="225dp"
+        android:layout_height="225dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
         android:padding="30dp"
-        android:src="@drawable/journal"
+        android:src="@drawable/profile"
         app:civ_border_width="3dp"
         app:civ_border_color="@color/colorWhite"/>
 
@@ -50,10 +50,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:text="username"
+        android:text=""
         android:textAlignment="center"
         android:clickable="true"
         android:textSize="36sp"
+        android:textColor="@color/colorAccentLightTheme"
         android:focusable="true" />
 
     <TextView
@@ -64,32 +65,8 @@
         android:layout_marginTop="70dp"
         android:elegantTextHeight="true"
         android:padding="5dp"
-        android:text="email"
+        android:text=""
         android:textAlignment="center"
         android:textColor="#DA000000"
         android:textSize="26sp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textAlignment="center">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/username_field"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:cursorVisible="false"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textAlignment="center"
-            android:textSize="36sp"
-            android:visibility="visible" />
-    </com.google.android.material.textfield.TextInputLayout>
-
 </FrameLayout>
