--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbar_diary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent"/>
