--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,6 +79,21 @@
         <item name="android:background">@drawable/additional_menu_labels</item>
         <item name="android:textColor">@color/white</item>
     </style>
-    
-    
+
+<!--    Custom Time Picker-->
+    <style name="DialogDarkTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/colorPrimaryDarkDarkTheme</item>
+        <item name="colorControlNormal">@color/colorPrimaryDarkDarkTheme</item>
+    </style>
+
+    <style name="DialogLightTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/colorPrimaryDarkLightTheme</item>
+        <item name="colorControlNormal">@color/colorPrimaryDarkLightTheme</item>
+    </style>
+
+    <style name="DialogGalaxyTheme" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorAccent">@color/colorPrimaryDarkGalaxyTheme</item>
+        <item name="colorControlNormal">@color/colorPrimaryDarkGalaxyTheme</item>
+    </style>
+
 </resources>
