--- a/app/src/main/res/layout/edit_mood_dialog.xml
+++ b/app/src/main/res/layout/edit_mood_dialog.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="272dp"
     android:layout_height="100dp"
-    android:background="@drawable/dialog_background"
+    android:background="@drawable/dialog_background_with_corners"
     android:layout_gravity="center">
 
     <LinearLayout
@@ -16,7 +16,7 @@
             android:id="@+id/angry_mood"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/mood"
+            android:src="@drawable/mood_angry"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"/>
 
@@ -24,7 +24,7 @@
             android:id="@+id/happy_mood"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/mood"
+            android:background="@drawable/mood_happy"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"/>
 
@@ -32,7 +32,7 @@
             android:id="@+id/sad_mood"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:background="@drawable/mood"
+            android:background="@drawable/mood_sad"
             android:layout_gravity="center"
             android:layout_marginLeft="15dp"/>
 
