--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,4 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item
+        android:id="@+id/toolbar_delete_menu"
+        android:icon="@drawable/ic_delete"
+        android:title="Delete"
+        app:showAsAction="always">
+    </item>
+
 </menu>
