Design MVVM, UI design for Recycler View *not complete yet*

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,4 +8,10 @@
     <attr name="backgroundForIcon" format="color"/>
     <attr name="colorIconForNav" format="color"/>
     <attr name="buttonPressedColor" format="color"/>
+    <declare-styleable name="MoodStyle">
+        <attr name="angryMoodBackground" format="color"/>
+        <attr name="happyMoodBackground" format="color"/>
+        <attr name="sadMoodBackground" format="color"/>
+        <attr name="expenseIconColor" format="color"/>
+    </declare-styleable>
 </resources>
