--- a/app/src/main/res/layout/item_expense_income.xml
+++ b/app/src/main/res/layout/item_expense_income.xml
@@ -7,27 +7,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="15dp"
     android:layout_marginHorizontal="15dp"
-    android:layout_marginTop="20dp">
+    android:layout_marginTop="20dp"
+    app:cardElevation="0dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
 
-            <TextView
-                android:id="@+id/tv_expense_income_time_item"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10:10"
-                android:paddingHorizontal="15dp"
-                android:paddingTop="10dp"
-                android:layout_alignParentEnd="true"/>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_expense_income_time_item"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="10:10"-->
+<!--                android:paddingHorizontal="15dp"-->
+<!--                android:paddingTop="10dp"-->
+<!--                android:layout_alignParentEnd="true"/>-->
 
-        </RelativeLayout>
+<!--        </RelativeLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,15 +48,38 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/tv_expense_income_amount_item"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Rp. 10000"
-                    android:textSize="30sp"
-                    android:textStyle="bold"
-                    android:paddingVertical="7dp"
-                    android:paddingStart="10dp"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_expense_income_amount_item"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Rp. 10000"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        android:paddingVertical="7dp"
+                        android:paddingStart="10dp"
+                        android:layout_marginRight="55dp"/>
+
+                    <RelativeLayout
+                        android:layout_width="40dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="-55dp">
+
+                        <TextView
+                            android:id="@+id/tv_expense_income_time_item"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="24:24"
+                            android:paddingTop="10dp"
+                            android:layout_alignParentEnd="true"/>
+
+                    </RelativeLayout>
+
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/tv_expense_income_notes_item"
